@@ -487,7 +487,7 @@ sub regist_article {
 		# 許可タグ以外の除去処理
 		my $escape = $self->load_tag_escaper( 'article' );
 		$text   = $escape->escape($text);
-		$text_s = $escape->escape($text_s);
+		# $text_s = $escape->escape($text_s);
 
 		# 値保存
 		$art{_text}  = $_text;	# parse 前のテキスト
@@ -1845,7 +1845,9 @@ sub mainte_mode {
 
 	# 管理者
 	if ($auth->{isadmin}) {
-		if (!$ROBJ->{POST}) { $ROBJ->message('Now maintenance mode'); }
+		if (!$ROBJ->{POST}) {
+			$ROBJ->message($self->{require_update} ? 'Require update' : 'Now maintenance mode');
+		}
 		return ;
 	}
 	# POSTはログインのみ許可
