@@ -2,7 +2,7 @@ use strict;
 #-------------------------------------------------------------------------------
 # adiary_6.pm (C)2014 nabe@abk
 #-------------------------------------------------------------------------------
-# ・システムアップグレード
+# ・システムアップデート
 # ・Version2からの移行機能
 #-------------------------------------------------------------------------------
 use SatsukiApp::adiary ();
@@ -19,7 +19,7 @@ my @update_versions = (
 	{ ver => 2.94, func => 'sys_update_294' },
 	{ ver => 2.95, plugin=>1 },
 	{ ver => 2.96, func => 'sys_update_296', plugin=>1, theme=>1   },
-	{ ver => 2.97, func => 'sys_update_297', plugin=>1, rebuild=>1 }
+	{ ver => 2.97, func => 'sys_update_297', plugin=>1, theme=>1, rebuild=>1 }
 );
 #------------------------------------------------------------------------------
 # ●システムアップデート
