@@ -3,9 +3,6 @@
 <@local(ret,s,t,t2,c,permalink,x,node,ps)>
 <$s = v.blog>
 
-<@> アップデート警告
-<@ifcall(v.require_update, '_sub/require_update')>
-
 <$ifexec(argv#0, begin, begin)>
 	<$t   = argv#0>
 	<$ret = argv#1>
