@@ -2,9 +2,6 @@
 <@6>
 <@local(ret,logs,s,t,coms,q,url,x,page,page_offfset,ps)>
 
-<@> アップデート警告
-<@ifcall(v.require_update, '_sub/require_update')>
-
 <$(logs,ret) = v.load_articles_current_blog(v.pinfo, Query)>
 <$s = v.blog>
 <$v.title = s.blog_name>
