@@ -167,7 +167,7 @@
 		</td>
 	</tr>
 
-	<tr><th>サイト画像の設定<span class="help" data-help="サイトトップページをFacebookでシェアした時などに表示される画像です。">?</span></th>
+	<tr><th>サイト画像の設定<span class="help" data-help="サイトトップページをFacebookでシェアした時などに表示される画像です。630x315以上のサイズを推奨します。">?</span></th>
 		<td>
 			<input type="file" name="blog_image"><br>
 			<@ifexec(s.blog_image, begin)>
