@@ -7,6 +7,7 @@
 	VERSION = データVersion
 	VERSION:type = num
 	VERSION:min = 2.90
+	VERSION:max = <@v.VERSION>
 
 	mainte_mode = flag
 	mainte_txt  = メンテナンスメッセージ
