@@ -85,9 +85,9 @@
 	<table class="blog-setting">
 	<tbody>
 	<tr>
-		<th>データVersion<span class="help" data-help="自動システムアップデートなどで参照するシステム内データVersionです。通常は書き換えないでください。">?</span></th>
+		<th>データVersion<span class="help" data-help="自動システムアップデートで参照するシステム内データVersionです。アップデート処理をどうしてもやり直したい時などに使用します。通常は書き換えないでください。">?</span></th>
 		<td<@err.c_VERSION>>
-			Ver <input type="number" class="w60" name="VERSION" step="0.01" min="2.90" value="<@sprintf('%.2f', s.VERSION)>">
+			Ver <input type="number" class="w60" name="VERSION" step="0.01" min="2.90" max="2.971" value="<@sprintf('%.2f', s.VERSION)>">
 			 <strong class="warning">※非常時以外書き換え禁止</strong>
 		</td>
 	</tr>
