@@ -4,7 +4,7 @@
 
 -[bf:テーマがたくさん増えました。]((今回の更新で大半の時間を要しました。協力者求むだったのですが、結局一人作業になりましてとても疲れました（苦笑）。なんかいいテーマできたらどんどん公開してください。))
 -[http://adiary.org/devman/theme/:テーマ開発マニュアル]をまとめました。
--Facebook OGP/Twitter Cardsに対応しました。((デバッグが十分ではないのでどなたか検証してください。なお通常ブラウザアクセス時はOGP等を出力しないようになっています。))
+-Facebook OGP/Twitter Cardsに対応しました。((デバッグが十分ではないので他の方にお任せ。なお通常ブラウザアクセス時はOGP等を出力しないようになっています。))
 -アップグレード処理が必要な時、自動的にメンテナンスモードに変更するようにしました。
 -ログイン時のIP/HOST制限機能が付きました。
 -コメント欄のロボットSPAM対策を強化しました。((JavaScriptを解釈するロボットSPAMが出たとしても大丈夫だと思います。不可能ではないものの、かなり投稿しにくくなっています。))
@@ -48,6 +48,8 @@
 -【fix】プライベートモード切替時、テーマのカスタマイズが無効になっていた。
 -【fix】スマホ表示でブログ設定などのフォームがはみ出していた。
 -【fix】さつき記法で、2行以上の「th（thead）」に対応していなかった。
+-【fix】さつき記法で、Ver2形式の image タグを記述したとき、alt属性がうまく設定されていなかった。
+-【fix】タグエスケープ機能で「alt=""」や「alt=xxx」といった空の値やクオートされていない値の処理が誤っていた。
 -他多数
 
 *Ver3.0β6 : 2015/05/17
